--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "extensions",
-    "sitefinity-admin-app"
+    "sitefinity-admin-app",
+    "extensions"
   ],
   "license": "ISC",
   "devDependencies": {
@@ -22,13 +23,13 @@
     "@angular/platform-browser": "4.3.5",
     "@angular/platform-browser-dynamic": "4.3.5",
     "@angular/router": "4.3.5",
-    "rxjs": "5.4.3",
-    "tslib": "1.7.1",
-    "iris": "file:../dist",
     "@types/node": "7.0.22",
     "awesome-typescript-loader": "3.1.3",
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
+    "rxjs": "5.4.3",
+    "sitefinity-admin-app": "file:../dist",
+    "tslib": "1.7.1",
     "typescript": "2.3.3",
     "webpack": "3.4.0",
     "webpack-dev-server": "2.7.1",
