--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
     "rxjs": "5.4.3",
-    "sitefinity-admin-app": "file:../dist",
+    "progress-sitefinity-adminapp-sdk": "0.1.0",
     "tslib": "1.7.1",
     "typescript": "2.3.3",
     "webpack": "3.4.0",
