--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iris-extensions",
+  "name": "progress-sitefinity-adminapp-extensions",
   "version": "0.0.1",
-  "description": "Provides extensions for the backend of Sitefinity(Iris)",
+  "description": "Provides extensions for the backend of the Progress Sitefinity Admin App",
   "main": "main.ts",
   "scripts": {
     "build": "webpack --config config/webpack.config.js --display-modules",
@@ -9,7 +9,9 @@
   },
   "keywords": [
     "extensions",
-    "iris"
+    "adminapp",
+    "angular",
+    "rxjs"
   ],
   "license": "ISC",
   "devDependencies": {
