--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.ts",
   "scripts": {
     "build": "webpack --config config/webpack.config.js --display-modules",
-    "start": "webpack-dev-server --config config/webpack.config.js"
+    "start": "webpack-dev-server --config config/webpack.config.js",
+    "lint": "tslint --project ./tsconfig.json"
   },
   "keywords": [
     "extensions",
@@ -15,37 +16,40 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@angular/animations": "4.3.5",
-    "@angular/common": "4.3.5",
-    "@angular/compiler": "4.3.5",
-    "@angular/core": "4.3.5",
-    "@angular/forms": "4.3.5",
-    "@angular/http": "4.3.5",
-    "@angular/platform-browser": "4.3.5",
-    "@angular/platform-browser-dynamic": "4.3.5",
-    "@angular/router": "4.3.5",
+    "@angular/animations": "5.2.2",
+    "@angular/common": "5.2.2",
+    "@angular/compiler": "5.2.2",
+    "@angular/core": "5.2.2",
+    "@angular/forms": "5.2.2",
+    "@angular/http": "5.2.2",
+    "@angular/platform-browser": "5.2.2",
+    "@angular/platform-browser-dynamic": "5.2.2",
+    "@angular/router": "5.2.2",
     "@types/node": "7.0.22",
     "awesome-typescript-loader": "3.1.3",
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.6",
     "progress-sitefinity-adminapp-sdk": "0.1.1",
     "tslib": "1.7.1",
-    "typescript": "2.3.3",
+    "typescript": "2.7.1",
     "webpack": "3.4.0",
     "webpack-dev-server": "2.7.1",
-    "webpack-sources": "1.0.1"
+    "webpack-sources": "1.0.1",
+    "tslint": "5.9.1",
+    "tslint-eslint-rules": "4.1.1",
+    "codelyzer": "4.1.0"
   },
   "peerDependencies": {
-    "@angular/animations": "4.3.5",
-    "@angular/common": "4.3.5",
-    "@angular/compiler": "4.3.5",
-    "@angular/core": "4.3.5",
-    "@angular/forms": "4.3.5",
-    "@angular/http": "4.3.5",
-    "@angular/platform-browser": "4.3.5",
-    "@angular/platform-browser-dynamic": "4.3.5",
-    "@angular/router": "4.3.5",
+    "@angular/animations": "5.2.2",
+    "@angular/common": "5.2.2",
+    "@angular/compiler": "5.2.2",
+    "@angular/core": "5.2.2",
+    "@angular/forms": "5.2.2",
+    "@angular/http": "5.2.2",
+    "@angular/platform-browser": "5.2.2",
+    "@angular/platform-browser-dynamic": "5.2.2",
+    "@angular/router": "5.2.2",
     "rxjs": "5.4.3",
     "tslib": "1.7.1"
   }
