--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
     "@angular/router": "5.2.2",
     "@types/node": "7.0.22",
     "awesome-typescript-loader": "3.1.3",
+    "codelyzer": "4.1.0",
+    "css-loader": "0.28.10",
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
-    "rxjs": "5.5.6",
     "progress-sitefinity-adminapp-sdk": "0.1.2",
+    "rxjs": "5.5.6",
+    "style-loader": "0.20.3",
     "tslib": "1.7.1",
+    "tslint": "5.9.1",
+    "tslint-eslint-rules": "4.1.1",
     "typescript": "2.7.1",
     "webpack": "3.4.0",
     "webpack-dev-server": "2.7.1",
-    "webpack-sources": "1.0.1",
-    "tslint": "5.9.1",
-    "tslint-eslint-rules": "4.1.1",
-    "codelyzer": "4.1.0"
+    "webpack-sources": "1.0.1"
   },
   "peerDependencies": {
     "@angular/animations": "5.2.2",
