--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@angular/platform-browser-dynamic": "5.2.2",
     "@angular/router": "5.2.2",
     "@types/node": "7.0.22",
+    "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.1.3",
     "codelyzer": "4.1.0",
     "css-loader": "0.28.10",
+    "css-to-string-loader": "0.1.3",
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
     "progress-sitefinity-adminapp-sdk": "0.1.8",
