--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "0.28.10",
     "css-to-string-loader": "0.1.3",
     "html-loader": "0.4.5",
+    "jsdom": "^11.11.0",
     "json-loader": "0.5.4",
     "progress-sitefinity-adminapp-sdk": "0.1.13",
     "rxjs": "5.5.6",
