--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@angular/animations": "5.2.2",
-    "@angular/common": "5.2.2",
-    "@angular/compiler": "5.2.2",
-    "@angular/core": "5.2.2",
-    "@angular/forms": "5.2.2",
-    "@angular/http": "5.2.2",
-    "@angular/platform-browser": "5.2.2",
-    "@angular/platform-browser-dynamic": "5.2.2",
-    "@angular/router": "5.2.2",
+    "@angular/animations": "6.1.3",
+    "@angular/common": "6.1.3",
+    "@angular/compiler": "6.1.3",
+    "@angular/core": "6.1.3",
+    "@angular/forms": "6.1.3",
+    "@angular/http": "6.1.3",
+    "@angular/platform-browser": "6.1.3",
+    "@angular/platform-browser-dynamic": "6.1.3",
+    "@angular/router": "6.1.3",
     "@types/node": "7.0.22",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.1.3",
@@ -34,7 +34,8 @@
     "html-loader": "0.4.5",
     "json-loader": "0.5.4",
     "progress-sitefinity-adminapp-sdk": "0.1.13",
-    "rxjs": "5.5.6",
+    "rxjs": "6.2.2",
+    "rxjs-compat": "6.2.2",
     "style-loader": "0.20.3",
     "tslib": "1.7.1",
     "tslint": "5.9.1",
@@ -45,16 +46,17 @@
     "webpack-sources": "1.0.1"
   },
   "peerDependencies": {
-    "@angular/animations": "5.2.2",
-    "@angular/common": "5.2.2",
-    "@angular/compiler": "5.2.2",
-    "@angular/core": "5.2.2",
-    "@angular/forms": "5.2.2",
-    "@angular/http": "5.2.2",
-    "@angular/platform-browser": "5.2.2",
-    "@angular/platform-browser-dynamic": "5.2.2",
-    "@angular/router": "5.2.2",
-    "rxjs": "5.4.3",
+    "@angular/animations": "6.1.3",
+    "@angular/common": "6.1.3",
+    "@angular/compiler": "6.1.3",
+    "@angular/core": "6.1.3",
+    "@angular/forms": "6.1.3",
+    "@angular/http": "6.1.3",
+    "@angular/platform-browser": "6.1.3",
+    "@angular/platform-browser-dynamic": "6.1.3",
+    "@angular/router": "6.1.3",
+    "rxjs": "6.2.2",
+    "rxjs-compat": "6.2.2",
     "tslib": "1.7.1"
   }
 }
