--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config config/webpack.config.js --display-modules --env.dev",
     "build:prod": "webpack --config config/webpack.config.js --display-modules --env.production",
-    "start": "webpack-dev-server --config config/webpack.config.js",
+    "start": "webpack-dev-server --config config/webpack.config.js --env.dev",
     "lint": "tslint --project ./tsconfig.json"
   },
   "keywords": [
