fix lint errors

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "webpack --config config/webpack.config.js --display-modules --env.dev",
     "build:prod": "webpack --config config/webpack.config.js --display-modules --env.production",
     "start": "webpack-dev-server --config config/webpack.config.js --env.dev",
-    "lint": "tslint --project ./tsconfig.json"
+    "lint": "tslint --project ./tsconfig.json",
+    "lint:fix": "tslint --fix  --project ./tsconfig.json"
+    
   },
   "keywords": [
     "extensions",
