--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "webpack --config config/webpack.config.js --display-modules --env.dev",
     "build:prod": "webpack --config config/webpack.config.js --display-modules --env.production",
     "start": "webpack-dev-server --config config/webpack.config.js --env.dev",
-    "lint": "tslint --project ./tsconfig.json"
+    "lint": "tslint --project ./tsconfig.json",
+    "lint:fix": "tslint --fix  --project ./tsconfig.json"
+    
   },
   "keywords": [
     "extensions",
@@ -17,23 +19,25 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@angular/animations": "6.1.3",
-    "@angular/common": "6.1.3",
-    "@angular/compiler": "6.1.3",
-    "@angular/core": "6.1.3",
-    "@angular/forms": "6.1.3",
-    "@angular/http": "6.1.3",
-    "@angular/platform-browser": "6.1.3",
-    "@angular/platform-browser-dynamic": "6.1.3",
-    "@angular/router": "6.1.3",
-    "@types/node": "7.0.22",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
+    "@types/node": "10.12.24",
     "angular2-template-loader": "0.6.2",
+    "circular-dependency-plugin": "5.0.2",
     "awesome-typescript-loader": "3.1.3",
+    "ts-loader": "5.3.3",
     "codelyzer": "4.1.0",
     "css-loader": "1.0.0",
     "css-to-string-loader": "0.1.3",
-    "html-loader": "0.4.5",
-    "json-loader": "0.5.4",
+    "html-loader": "0.5.5",
+    "json-loader": "0.5.7",
     "progress-sitefinity-adminapp-sdk": "1.0.2",
     "rxjs": "6.2.2",
     "style-loader": "0.20.3",
@@ -42,20 +46,21 @@
     "tslint-eslint-rules": "4.1.1",
     "typescript": "2.7.1",
     "uglifyjs-webpack-plugin": "1.2.5",
-    "webpack": "3.4.0",
-    "webpack-dev-server": "2.11.1",
-    "webpack-sources": "1.0.1"
+    "webpack": "4.29.3",
+    "webpack-dev-server": "3.1.14",
+    "webpack-sources": "1.3.0",
+    "webpack-cli": "3.2.3"
   },
   "peerDependencies": {
-    "@angular/animations": "6.1.3",
-    "@angular/common": "6.1.3",
-    "@angular/compiler": "6.1.3",
-    "@angular/core": "6.1.3",
-    "@angular/forms": "6.1.3",
-    "@angular/http": "6.1.3",
-    "@angular/platform-browser": "6.1.3",
-    "@angular/platform-browser-dynamic": "6.1.3",
-    "@angular/router": "6.1.3",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
     "rxjs": "6.2.2",
     "tslib": "1.7.1"
   }
