--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "webpack-dev-server --config config/webpack.config.js --env.dev",
     "lint": "tslint --project ./tsconfig.json",
     "lint:fix": "tslint --fix  --project ./tsconfig.json"
-    
   },
   "keywords": [
     "extensions",
@@ -29,6 +28,7 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/router": "7.0.0",
     "@types/node": "10.12.24",
+    "@types/react": "16.8.17",
     "angular2-template-loader": "0.6.2",
     "circular-dependency-plugin": "5.0.2",
     "awesome-typescript-loader": "3.1.3",
@@ -39,12 +39,14 @@
     "html-loader": "0.5.5",
     "json-loader": "0.5.7",
     "progress-sitefinity-adminapp-sdk": "1.0.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "rxjs": "6.2.2",
     "style-loader": "0.20.3",
     "tslib": "1.7.1",
     "tslint": "5.9.1",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.7.1",
+    "typescript": "3.4.5",
     "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "4.29.3",
     "webpack-dev-server": "3.1.14",
