--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:prod": "webpack --config config/webpack.config.js --display-modules --env.production",
     "start": "webpack-dev-server --config config/webpack.config.js --env.dev",
     "lint": "tslint --project ./tsconfig.json",
-    "lint:fix": "tslint --fix  --project ./tsconfig.json"
+    "lint:fix": "tslint --fix  --project ./tsconfig.json",
+    "postinstall": "ngcc"
   },
   "keywords": [
     "extensions",
@@ -18,15 +19,16 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@angular/animations": "8.2.2",
-    "@angular/common": "8.2.2",
-    "@angular/compiler": "8.2.2",
-    "@angular/core": "8.2.2",
-    "@angular/forms": "8.2.2",
+    "@angular/compiler-cli": "9.1.4",
+    "@angular/animations": "9.1.4",
+    "@angular/common": "9.1.4",
+    "@angular/compiler": "9.1.4",
+    "@angular/core": "9.1.4",
+    "@angular/forms": "9.1.4",
     "@angular/http": "7.2.15",
-    "@angular/platform-browser": "8.2.2",
-    "@angular/platform-browser-dynamic": "8.2.2",
-    "@angular/router": "8.2.2",
+    "@angular/platform-browser": "9.1.4",
+    "@angular/platform-browser-dynamic": "9.1.4",
+    "@angular/router": "9.1.4",
     "@types/node": "10.12.24",
     "angular2-template-loader": "0.6.2",
     "circular-dependency-plugin": "5.0.2",
@@ -43,7 +45,7 @@
     "tslib": "1.7.1",
     "tslint": "5.17.0",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.7.1",
+    "typescript": "3.8.3",
     "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "4.29.3",
     "webpack-dev-server": "3.1.14",
