--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "tslint-eslint-rules": "4.1.1",
     "@angular-builders/custom-webpack": "9.1.0",
     "webpack": "4.43.0",
-    "@types/webpack": "4.41.17"
+    "@types/webpack": "4.41.17",
+    "css-loader": "3.6.0",
+    "css-to-string-loader": "0.1.3"
   },
   "peerDependencies": {
     "@angular/animations": "9.1.6",
