--- a/angular.json
+++ b/angular.json
@@ -33,18 +33,22 @@
                                     "externals": "replace"
                                 }
                             }
+                        },
+                        "dev": {
+                            "assets": [
+                                {
+                                    "glob": "**/*",
+                                    "input": "./node_modules/progress-sitefinity-adminapp-sdk/wwwroot",
+                                    "output": "./"
+                                }
+                            ]
                         }
                     }
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
-                        "browserTarget": "extensions-cli:build"
-                    },
-                    "configurations": {
-                        "production": {
-                            "browserTarget": "extensions-cli:build:production"
-                        }
+                        "browserTarget": "extensions-cli:build:dev"
                     }
                 }
             }
