--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "module": "CommonJS",
+    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES5",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": [
       "es2018",
