Upgrade Angular to  v11 (#260)
* merge develop to master (#147)

* Fix E2E tests using the new navigation (#137)

* fix e2e (#143)

* Array of GUIDs custom field (#144)

* Array of GUIDs custom field

* Refactor tests to use dynamic items and not hardcoded (#145)

* Readme fix

* Vandov/merge develop to master (#151)

* Fix E2E tests using the new navigation (#137)

* fix e2e (#143)

* Array of GUIDs custom field (#144)

* Array of GUIDs custom field

* Refactor tests to use dynamic items and not hardcoded (#145)

* Upgrade to latest angular and fix audit issues (#141)

* Upgrade to latest angular and fix audit issues

* Fixed md file formatting

* empty ciommit

* Merge develop to master (#184)

* Merge develop to master (#214)

* Fix documentation links

* update packages

* rm

* space

* package

* restore readme

Co-authored-by: jmeleshko <julia.meleshko@progress.com>
Co-authored-by: KirilVandov <8556259+KirilVandov@users.noreply.github.com>
Co-authored-by: Nikolai Novkirishki <Novkirishki@users.noreply.github.com>
Co-authored-by: Nikolai Novkirishki <novkirishki94@gmail.com>
Co-authored-by: Katalina Dimitrova <lina94@users.noreply.github.com>
Co-authored-by: Velin Ivanov <velin.ivanov@telerik.com>
Co-authored-by: Gabriel <belchev.gb@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "module": "CommonJS",
+    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES5",
