custom date field

--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
         "@angular/platform-browser-dynamic": "11.0.3",
         "@angular/router": "11.0.3",
         "@progress/sitefinity-adminapp-sdk": "13.3.7622",
+        "@progress/kendo-angular-common": "1.2.4",
+        "@progress/kendo-angular-dateinputs": "4.4.1",
+        "@progress/kendo-angular-intl": "2.0.4",
+        "@progress/kendo-angular-l10n": "2.0.3",
+        "@progress/kendo-angular-layout": "5.1.0",
+        "@progress/kendo-angular-popup": "3.0.7",
+        "@progress/kendo-angular-progressbar": "1.0.1",
+        "@progress/kendo-theme-default": "4.31.0",
         "@types/node": "14.14.13",
         "codelyzer": "5.1.2",
         "karma": "5.2.3",
