--- a/package.json
+++ b/package.json
@@ -10,43 +10,43 @@
     },
     "private": true,
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.1100.4",
-        "@angular/cli": "11.0.3",
-        "@angular/compiler-cli": "11.0.3",
-        "@angular/animations": "11.0.3",
-        "@angular/common": "11.0.3",
-        "@angular/compiler": "11.0.3",
-        "@angular/core": "11.0.3",
-        "@angular/forms": "11.0.3",
-        "@angular/platform-browser": "11.0.3",
-        "@angular/platform-browser-dynamic": "11.0.3",
-        "@angular/router": "11.0.3",
-        "@progress/sitefinity-adminapp-sdk": "14.1.7823",
-        "@types/node": "14.14.13",
-        "codelyzer": "5.1.2",
-        "karma": "5.2.3",
-        "karma-chrome-launcher": "3.1.0",
+        "@angular-builders/custom-webpack": "13.1.0",
+        "@angular-devkit/build-angular": "13.3.3",
+        "@angular/animations": "13.3.3",
+        "@angular/cli": "13.3.3",
+        "@angular/common": "13.3.3",
+        "@angular/compiler": "13.3.3",
+        "@angular/compiler-cli": "13.3.3",
+        "@angular/core": "13.3.3",
+        "@angular/forms": "13.3.3",
+        "@angular/platform-browser": "13.3.3",
+        "@angular/platform-browser-dynamic": "13.3.3",
+        "@angular/router": "13.3.3",
+        "@types/node": "17.0.24",
+        "@types/webpack": "5.28.0",
+        "codelyzer": "6.0.2",
+        "css-loader": "6.7.1",
+        "karma": "6.3.18",
+        "karma-chrome-launcher": "3.1.1",
         "karma-coverage-istanbul-reporter": "3.0.3",
-        "ts-node": "9.1.1",
+        "postcss": "^8.4.12",
+        "postcss-loader": "^6.2.1",
+        "style-loader": "^3.3.1",
+        "ts-node": "10.2.1",
         "tslint": "6.1.3",
-        "typescript": "4.0.2",
-        "zone.js": "0.11.3",
-        "tslint-eslint-rules": "4.1.1",
-        "@angular-builders/custom-webpack": "10.0.1",
-        "webpack": "4.6.0",
-        "@types/webpack": "4.41.25",
-        "css-loader": "3.6.0",
-        "css-to-string-loader": "0.1.3"
+        "typescript": "4.6.3",
+        "webpack": "5.72.0",
+        "zone.js": "0.11.5"
     },
     "peerDependencies": {
-        "@angular/animations": "11.0.3",
-        "@angular/common": "11.0.3",
-        "@angular/compiler": "11.0.3",
-        "@angular/router": "11.0.3",
-        "@angular/core": "11.0.3",
-        "@angular/forms": "11.0.3",
-        "@angular/platform-browser": "11.0.3",
-        "@angular/platform-browser-dynamic": "11.0.3",
+        "@angular/animations": "13.3.3",
+        "@angular/common": "13.3.3",
+        "@angular/compiler": "13.3.3",
+        "@angular/core": "13.3.3",
+        "@angular/forms": "13.3.3",
+        "@angular/platform-browser": "13.3.3",
+        "@angular/platform-browser-dynamic": "13.3.3",
+        "@angular/router": "13.3.3",
         "rxjs": "6.6.3",
         "tslib": "2.0.3"
     }
