--- a/package.json
+++ b/package.json
@@ -22,16 +22,14 @@
         "@angular/platform-browser": "13.3.3",
         "@angular/platform-browser-dynamic": "13.3.3",
         "@angular/router": "13.3.3",
+        "@progress/sitefinity-adminapp-sdk": "14.1.7823",
         "@types/node": "17.0.24",
         "@types/webpack": "5.28.0",
         "codelyzer": "6.0.2",
         "css-loader": "6.7.1",
-        "karma": "6.3.18",
-        "karma-chrome-launcher": "3.1.1",
-        "karma-coverage-istanbul-reporter": "3.0.3",
-        "postcss": "^8.4.12",
-        "postcss-loader": "^6.2.1",
-        "style-loader": "^3.3.1",
+        "postcss": "8.4.12",
+        "postcss-loader": "6.2.1",
+        "style-loader": "3.3.1",
         "ts-node": "10.2.1",
         "tslint": "6.1.3",
         "typescript": "4.6.3",
