--- a/package.json
+++ b/package.json
@@ -32,18 +32,8 @@
         "ts-node": "10.2.1",
         "typescript": "4.6.3",
         "webpack": "5.72.0",
-        "zone.js": "0.11.5"
-    },
-    "peerDependencies": {
-        "@angular/animations": "13.3.3",
-        "@angular/common": "13.3.3",
-        "@angular/compiler": "13.3.3",
-        "@angular/core": "13.3.3",
-        "@angular/forms": "13.3.3",
-        "@angular/platform-browser": "13.3.3",
-        "@angular/platform-browser-dynamic": "13.3.3",
-        "@angular/router": "13.3.3",
-        "rxjs": "6.6.3",
-        "tslib": "2.0.3"
+        "zone.js": "0.11.5",
+        "rxjs": "7.5.5",
+        "tslib": "2.3.1"
     }
 }
