--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,18 @@
                     "options": {
                         "browserTarget": "extensions-cli:build:dev"
                     }
+                },
+                "lint": {
+                    "builder": "@angular-eslint/builder:lint",
+                    "options": {
+                        "lintFilePatterns": [
+                            "./src/**/*.ts",
+                            "./src/**/*.html",
+                            "./build/**/*.ts",
+                            "./**/*.js"
+                        ],
+                        "cache": true
+                    }
                 }
             }
         }
