--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "debug:cli": "node --max-old-space-size=8192 --inspect-brk ./node_modules/@angular/cli/bin/ng build",
         "start": "ng serve --port 3000",
         "build": "ng build",
-        "build:prod": "ng build -c prod"
+        "build:prod": "ng build -c prod",
+        "lint": "ng lint",
+        "lint:fix": "ng lint --fix"
     },
     "private": true,
     "devDependencies": {
@@ -22,10 +24,17 @@
         "@angular/platform-browser": "13.3.3",
         "@angular/platform-browser-dynamic": "13.3.3",
         "@angular/router": "13.3.3",
+        "@angular-eslint/builder": "13.2.1",
+        "@angular-eslint/eslint-plugin": "13.2.1",
+        "@angular-eslint/eslint-plugin-template": "13.2.1",
+        "@angular-eslint/template-parser": "13.2.1",
         "@progress/sitefinity-adminapp-sdk": "14.1.7824",
         "@types/node": "17.0.24",
         "@types/webpack": "5.28.0",
+        "@typescript-eslint/eslint-plugin": "5.20.0",
+        "@typescript-eslint/parser": "5.20.0",
         "css-loader": "6.7.1",
+        "eslint": "8.13.0",
         "postcss": "8.4.12",
         "postcss-loader": "6.2.1",
         "style-loader": "3.3.1",
