Make submodule tracking branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "samples"]
 	path = samples
 	url = https://github.com/Sitefinity/sitefinity-admin-app-extensions-samples.git
+	branch = master
