--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-    "name": "progress-sitefinity-adminapp-extensions",
-    "version": "0.0.1",
-    "description": "Provides extensions for the backend of the Progress Sitefinity Admin App",
-    "scripts": {
-        "submodule:update": "git submodule update --remote",
-        "debug:cli": "node --max-old-space-size=8192 --inspect-brk ./node_modules/@angular/cli/bin/ng build",
-        "start": "ng serve --port 3000",
-        "build": "ng build",
-        "build:prod": "ng build -c prod",
-        "lint": "ng lint",
-        "lint:fix": "ng lint --fix"
-    },
-    "private": true,
-    "devDependencies": {
-        "@angular-builders/custom-webpack": "14.0.0",
-        "@angular-devkit/build-angular": "14.0.5",
-        "@angular/animations": "14.0.5",
-        "@angular/cli": "14.0.5",
-        "@angular/common": "14.0.5",
-        "@angular/compiler": "14.0.5",
-        "@angular/compiler-cli": "14.0.5",
-        "@angular/core": "14.0.5",
-        "@angular/forms": "14.0.5",
-        "@angular/platform-browser": "14.0.5",
-        "@angular/platform-browser-dynamic": "14.0.5",
-        "@angular/router": "14.0.5",
-        "@angular-eslint/builder": "13.2.1",
-        "@angular-eslint/eslint-plugin": "13.2.1",
-        "@angular-eslint/eslint-plugin-template": "13.2.1",
-        "@angular-eslint/template-parser": "13.2.1",
-        "@progress/sitefinity-adminapp-sdk": "14.4.8123",
-        "@types/node": "18.13.0",
-        "@types/webpack": "5.28.0",
-        "@typescript-eslint/eslint-plugin": "5.51.0",
-        "@typescript-eslint/parser": "5.51.0",
-        "css-loader": "5.2.7",
-        "eslint": "8.33.0",
-        "postcss": "8.4.21",
-        "postcss-loader": "7.0.2",
-        "style-loader": "3.3.1",
-        "ts-node": "10.9.1",
-        "typescript": "4.6.3",
-        "webpack": "5.75.0",
-        "zone.js": "0.11.8",
-        "rxjs": "7.5.6",
-        "tslib": "2.5.0"
-    }
+  "name": "progress-sitefinity-adminapp-extensions",
+  "version": "0.0.1",
+  "description": "Provides extensions for the backend of the Progress Sitefinity Admin App",
+  "scripts": {
+    "submodule:update": "git submodule update --remote",
+    "debug:cli": "node --max-old-space-size=8192 --inspect-brk ./node_modules/@angular/cli/bin/ng build",
+    "start": "ng serve --port 3000",
+    "build": "ng build",
+    "build:prod": "ng build -c prod",
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix"
+  },
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "15.0.0",
+    "@angular-devkit/build-angular": "15.2.8",
+    "@angular/animations": "15.2.9",
+    "@angular/cli": "15.2.8",
+    "@angular/common": "15.2.9",
+    "@angular/compiler": "15.2.9",
+    "@angular/compiler-cli": "15.2.9",
+    "@angular/core": "15.2.9",
+    "@angular/forms": "15.2.9",
+    "@angular/platform-browser": "15.2.9",
+    "@angular/platform-browser-dynamic": "15.2.9",
+    "@angular/router": "15.2.9",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@progress/sitefinity-adminapp-sdk": "14.4.8123",
+    "@types/node": "18.13.0",
+    "@types/webpack": "5.28.0",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
+    "css-loader": "5.2.7",
+    "eslint": "8.33.0",
+    "postcss": "8.4.21",
+    "postcss-loader": "7.0.2",
+    "style-loader": "3.3.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.5",
+    "webpack": "5.75.0",
+    "zone.js": "0.11.8",
+    "rxjs": "7.5.6",
+    "tslib": "2.5.0"
+  }
 }
