--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "lint:fix": "ng lint --fix"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@angular-builders/custom-webpack": "15.0.0",
     "@angular-devkit/build-angular": "15.2.8",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/animations": "15.2.9",
     "@angular/cli": "15.2.8",
     "@angular/common": "15.2.9",
@@ -26,10 +29,6 @@
     "@angular/platform-browser": "15.2.9",
     "@angular/platform-browser-dynamic": "15.2.9",
     "@angular/router": "15.2.9",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
     "@progress/sitefinity-adminapp-sdk": "14.4.8123",
     "@types/node": "18.13.0",
     "@types/webpack": "5.28.0",
@@ -39,12 +38,12 @@
     "eslint": "8.33.0",
     "postcss": "8.4.21",
     "postcss-loader": "7.0.2",
+    "rxjs": "7.5.6",
     "style-loader": "3.3.1",
     "ts-node": "10.9.1",
+    "tslib": "2.5.0",
     "typescript": "4.9.5",
     "webpack": "5.75.0",
-    "zone.js": "0.11.8",
-    "rxjs": "7.5.6",
-    "tslib": "2.5.0"
+    "zone.js": "0.11.8"
   }
 }
