--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@angular/platform-browser": "17.2.2",
         "@angular/platform-browser-dynamic": "17.2.2",
         "@angular/router": "17.2.2",
+        "@progress/sitefinity-adminapp-sdk": "15.0.8226",
+        "@progress/sitefinity-component-framework": "9.0.0",
         "@types/node": "20.11.20",
         "@types/webpack": "5.28.5",
         "@typescript-eslint/eslint-plugin": "7.0.2",
