--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@angular/platform-browser": "18.0.4",
         "@angular/platform-browser-dynamic": "18.0.4",
         "@angular/router": "18.0.4",
+        "@progress/sitefinity-adminapp-sdk": "15.1.8324",
+        "@progress/sitefinity-component-framework": "10.0.0",
         "@types/node": "20.14.9",
         "@types/webpack": "5.28.5",
         "@typescript-eslint/eslint-plugin": "7.14.1",
