--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "@angular/forms": "18.1.3",
         "@angular/platform-browser": "18.1.3",
         "@angular/platform-browser-dynamic": "18.1.3",
-        "@angular/router": "18.1.3",
+        "@angular/router": "18.1.3",        
+        "@progress/sitefinity-adminapp-sdk": "15.1.8325",
+        "@progress/sitefinity-component-framework": "10.0.0",
         "@types/node": "20.14.9",
         "@types/webpack": "5.28.5",
         "@typescript-eslint/eslint-plugin": "7.14.1",
