--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,7 @@
                 "serve": {
                     "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
-                        "browserTarget": "extensions-cli:build:dev"
+                        "buildTarget": "extensions-cli:build:dev"
                     }
                 },
                 "lint": {
